--- a/index.html
+++ b/index.html
@@ -1,28 +1,275 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="X-UA-Compatible" content="IE=Edge"/>
   <meta charset="utf-8"/>
-  <title>Ju-Jin</title>
-  <meta name="fb_admins_meta_tag" content=""/>
-  <link rel="shortcut icon" href="https://static.parastorage.com/client/pfavico.ico" type="image/x-icon"/>
-  <link rel="apple-touch-icon" href="https://static.parastorage.com/client/pfavico.ico" type="image/x-icon"/>
-  <meta property="og:title" content="ju-jin"/>
-  <meta property="og:type" content="website"/>
-  <meta property="og:url" content="http://www.jujindesign.com/"/>
-  <meta property="og:site_name" content="ju-jin"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Ju Jin, UX Designer, portfolio">
+  <meta name="author" content="Ju Jin">
+  <title>Ju Jin</title>
 
   <!-- Styles -->
   <link rel="stylesheet" type="text/css" href="assets/styles/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="assets/styles/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="assets/styles/freelancer.min.css">
   <link rel="stylesheet" type="text/css" href="assets/styles/app.css">
 
   <!-- Libraries -->
   <script type="text/javascript" src="js/libs/jquery-2.2.4.min.js"></script>
   <script type="text/javascript" src="js/libs/bootstrap.min.js"></script>
 
+  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+  <![endif]-->
 </head>
 <body>
-  <div></div>
-  <script type="text/javascript" src="js/app.js"></script>
+  
+  <!-- Navigation -->
+  <nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom">
+      <div class="container">
+          <!-- Brand and toggle get grouped for better mobile display -->
+          <div class="navbar-header page-scroll">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                  <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
+              </button>
+              <a class="navbar-brand" href="#page-top" id="logo">
+                <img src="assets/images/logo.png">
+              </a>
+          </div>
+
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+              <ul class="nav navbar-nav navbar-right">
+                  <li class="hidden">
+                      <a href="#page-top"></a>
+                  </li>
+                  <li class="page-scroll">
+                      <a href="#ux-design">UX Design</a>
+                  </li>
+                  <li class="page-scroll">
+                      <a href="#3d-design">3D Design</a>
+                  </li>
+                  <li class="page-scroll">
+                      <a href="#about">About</a>
+                  </li>
+                  <li class="page-scroll">
+                      <a href="#resume">Resume</a>
+                  </li>
+                  <li class="page-scroll">
+                      <a href="#contact">Contact</a>
+                  </li>
+              </ul>
+          </div>
+          <!-- /.navbar-collapse -->
+      </div>
+      <!-- /.container-fluid -->
+  </nav>
+
+  <!-- Portfolio Grid Section -->
+  <!-- UX Design Section -->
+  <section id="ux-design">
+      <div class="container">
+          <div class="row">
+              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 portfolio-item">
+                  <a href="project.html" class="portfolio-link">
+                      <div class="caption">
+                          <div class="caption-content">
+                              <i class="fa fa-search-plus fa-3x"></i>
+                          </div>
+                      </div>
+                      <img src="assets/images/proj1.png" class="img-responsive" alt="">
+                  </a>
+              </div>
+              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 portfolio-item">
+                  <a href="project.html" class="portfolio-link">
+                      <div class="caption">
+                          <div class="caption-content">
+                              <i class="fa fa-search-plus fa-3x"></i>
+                          </div>
+                      </div>
+                      <img src="assets/images/proj1.png" class="img-responsive" alt="">
+                  </a>
+              </div>
+              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 portfolio-item">
+                  <a href="project.html" class="portfolio-link">
+                      <div class="caption">
+                          <div class="caption-content">
+                              <i class="fa fa-search-plus fa-3x"></i>
+                          </div>
+                      </div>
+                      <img src="assets/images/proj1.png" class="img-responsive" alt="">
+                  </a>
+              </div>
+              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 portfolio-item">
+                  <a href="project.html" class="portfolio-link">
+                      <div class="caption">
+                          <div class="caption-content">
+                              <i class="fa fa-search-plus fa-3x"></i>
+                          </div>
+                      </div>
+                      <img src="assets/images/proj1.png" class="img-responsive" alt="">
+                  </a>
+              </div>
+          </div>
+      </div>
+  </section>
+
+  <!-- 3D Design Section -->
+  <section id="3d-design">
+      <div class="container">
+          <div class="row">
+              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 portfolio-item">
+                  <a href="#" class="portfolio-link">
+                      <div class="caption">
+                          <div class="caption-content">
+                              <i class="fa fa-search-plus fa-3x"></i>
+                          </div>
+                      </div>
+                      <img src="assets/images/proj1.png" class="img-responsive" alt="">
+                  </a>
+              </div>
+              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 portfolio-item">
+                  <a href="#" class="portfolio-link">
+                      <div class="caption">
+                          <div class="caption-content">
+                              <i class="fa fa-search-plus fa-3x"></i>
+                          </div>
+                      </div>
+                      <img src="assets/images/proj1.png" class="img-responsive" alt="">
+                  </a>
+              </div>
+              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 portfolio-item">
+                  <a href="#" class="portfolio-link">
+                      <div class="caption">
+                          <div class="caption-content">
+                              <i class="fa fa-search-plus fa-3x"></i>
+                          </div>
+                      </div>
+                      <img src="assets/images/proj1.png" class="img-responsive" alt="">
+                  </a>
+              </div>
+              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 portfolio-item">
+                  <a href="#" class="portfolio-link">
+                      <div class="caption">
+                          <div class="caption-content">
+                              <i class="fa fa-search-plus fa-3x"></i>
+                          </div>
+                      </div>
+                      <img src="assets/images/proj1.png" class="img-responsive" alt="">
+                  </a>
+              </div>
+          </div>
+      </div>
+  </section>
+
+  <!-- About Section -->
+  <section id="about">
+      <div class="container">
+          <div class="row">
+              <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
+                <img class="img-circle img-responsive img-center" src="assets/images/self.webp" alt="">
+              </div>
+              <div class="col-lg-8 col-md-8 col-sm-6 col-xs-6">
+                <h4>Hi, I'm Ju Jin.</h4>
+                <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+              </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+              <img class="img-responsive img-center" src="assets/images/tool1.webp" alt="">
+              <p><span>Specialites: </span>These marketing boxes are a great place to put some information. These can contain summaries of what the company does, promotional information, or anything else that is relevant to the company. These will usually be below-the-fold.</p>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+              <img class="img-responsive img-center" src="assets/images/tool2.webp" alt="">
+              <p><span>Methods: </span>These marketing boxes are a great place to put some information. These can contain summaries of what the company does, promotional information, or anything else that is relevant to the company. These will usually be below-the-fold.</p>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+              <img class="img-responsive img-center" src="assets/images/tool3.webp" alt="">
+              <p><span>Tools: </span>These marketing boxes are a great place to put some information. These can contain summaries of what the company does, promotional information, or anything else that is relevant to the company. These will usually be below-the-fold.</p>
+            </div>
+          </div>
+      </div>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact">
+      <div class="container">
+          <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <p>Let's talk more! Please email me directly via mashamarkgraf at gmail dot com or send me a message by using the form below.</p>
+                <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
+                <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
+                <form name="sentMessage" id="contactForm" novalidate>
+                    <div class="row control-group">
+                        <div class="form-group col-xs-12 floating-label-form-group controls">
+                            <label>Name</label>
+                            <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
+                            <p class="help-block text-danger"></p>
+                        </div>
+                    </div>
+                    <div class="row control-group">
+                        <div class="form-group col-xs-12 floating-label-form-group controls">
+                            <label>Email Address</label>
+                            <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
+                            <p class="help-block text-danger"></p>
+                        </div>
+                    </div>
+                    <div class="row control-group">
+                        <div class="form-group col-xs-12 floating-label-form-group controls">
+                            <label>Phone Number</label>
+                            <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
+                            <p class="help-block text-danger"></p>
+                        </div>
+                    </div>
+                    <div class="row control-group">
+                        <div class="form-group col-xs-12 floating-label-form-group controls">
+                            <label>Message</label>
+                            <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
+                            <p class="help-block text-danger"></p>
+                        </div>
+                    </div>
+                    <br>
+                    <div id="success"></div>
+                    <div class="row">
+                        <div class="form-group col-xs-12">
+                            <button type="submit" class="btn btn-success btn-lg">Send</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+          </div>
+      </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="text-center">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                Copyright &copy; Ju Jin Design 2016
+            </div>
+        </div>
+    </div>
+  </footer>
+
+  <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
+  <div class="scroll-top page-scroll hidden-sm hidden-xs hidden-lg hidden-md">
+      <a class="btn btn-primary" href="#page-top">
+          <i class="fa fa-chevron-up"></i>
+      </a>
+  </div>
+
+  <!-- Plugin JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+
+  <!-- Contact Form JavaScript -->
+  <script src="js/jqBootstrapValidation.js"></script>
+  <script src="js/contact_me.js"></script>
+
+  <!-- Theme JavaScript -->
+  <script src="js/freelancer.min.js"></script>
 </body>
 </html>
