most finished portfolio, need more styles

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                       <a href="#about">About</a>
                   </li>
                   <li class="page-scroll">
-                      <a href="#resume">Resume</a>
+                      <a href="https://drive.google.com/file/d/0BwN89NjuvgNNVDRrMHZld2Nsd00/view" target="_blank">Resume</a>
                   </li>
                   <li class="page-scroll">
                       <a href="#contact">Contact</a>
@@ -73,45 +73,65 @@
   <section id="ux-design">
       <div class="container">
           <div class="row">
-              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 portfolio-item">
-                  <a href="project.html" class="portfolio-link">
-                      <div class="caption">
-                          <div class="caption-content">
-                              <i class="fa fa-search-plus fa-3x"></i>
-                          </div>
-                      </div>
-                      <img src="assets/images/proj1.png" class="img-responsive" alt="">
+              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                <div class="hovereffect">
+                  <a href="project.html">
+                    <img class="img-responsive" src="assets/images/proj1.png" alt="">
+                    <div class="overlay">
+                      <h2>Effect 13</h2>
+                      <p>LINK HERE</p> 
+                    </div>
                   </a>
+                  <p>Bike</p>
+                </div>
               </div>
-              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 portfolio-item">
-                  <a href="project.html" class="portfolio-link">
-                      <div class="caption">
-                          <div class="caption-content">
-                              <i class="fa fa-search-plus fa-3x"></i>
-                          </div>
-                      </div>
-                      <img src="assets/images/proj1.png" class="img-responsive" alt="">
+              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                <div class="hovereffect">
+                  <a href="project.html">
+                    <img class="img-responsive" src="assets/images/proj1.png" alt="">
+                    <div class="overlay">
+                      <h2>Effect 13</h2>
+                      <p>LINK HERE</p> 
+                    </div>
                   </a>
+                  <p>Bike</p>
+                </div>
               </div>
-              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 portfolio-item">
-                  <a href="project.html" class="portfolio-link">
-                      <div class="caption">
-                          <div class="caption-content">
-                              <i class="fa fa-search-plus fa-3x"></i>
-                          </div>
-                      </div>
-                      <img src="assets/images/proj1.png" class="img-responsive" alt="">
+              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                <div class="hovereffect">
+                  <a href="project.html">
+                    <img class="img-responsive" src="assets/images/proj1.png" alt="">
+                    <div class="overlay">
+                      <h2>Effect 13</h2>
+                      <p>LINK HERE</p> 
+                    </div>
                   </a>
+                  <p>Bike</p>
+                </div>
               </div>
-              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 portfolio-item">
-                  <a href="project.html" class="portfolio-link">
-                      <div class="caption">
-                          <div class="caption-content">
-                              <i class="fa fa-search-plus fa-3x"></i>
-                          </div>
-                      </div>
-                      <img src="assets/images/proj1.png" class="img-responsive" alt="">
+              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                <div class="hovereffect">
+                  <a href="project.html">
+                    <img class="img-responsive" src="assets/images/proj1.png" alt="">
+                    <div class="overlay">
+                      <h2>Effect 13</h2>
+                      <p>LINK HERE</p> 
+                    </div>
                   </a>
+                  <p>Bike</p>
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                <div class="hovereffect">
+                  <a href="project.html">
+                    <img class="img-responsive" src="assets/images/proj1.png" alt="">
+                    <div class="overlay">
+                      <h2>Effect 13</h2>
+                      <p>LINK HERE</p> 
+                    </div>
+                  </a>
+                  <p>Bike</p>
+                </div>
               </div>
           </div>
       </div>
@@ -121,45 +141,65 @@
   <section id="3d-design">
       <div class="container">
           <div class="row">
-              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 portfolio-item">
-                  <a href="#" class="portfolio-link">
-                      <div class="caption">
-                          <div class="caption-content">
-                              <i class="fa fa-search-plus fa-3x"></i>
-                          </div>
-                      </div>
-                      <img src="assets/images/proj1.png" class="img-responsive" alt="">
+              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                <div class="hovereffect">
+                  <a href="project.html">
+                    <img class="img-responsive" src="assets/images/proj1.png" alt="">
+                    <div class="overlay">
+                      <h2>Effect 13</h2>
+                      <p>LINK HERE</p> 
+                    </div>
                   </a>
+                  <p>Bike</p>
+                </div>
               </div>
-              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 portfolio-item">
-                  <a href="#" class="portfolio-link">
-                      <div class="caption">
-                          <div class="caption-content">
-                              <i class="fa fa-search-plus fa-3x"></i>
-                          </div>
-                      </div>
-                      <img src="assets/images/proj1.png" class="img-responsive" alt="">
+              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                <div class="hovereffect">
+                  <a href="project.html">
+                    <img class="img-responsive" src="assets/images/proj1.png" alt="">
+                    <div class="overlay">
+                      <h2>Effect 13</h2>
+                      <p>LINK HERE</p> 
+                    </div>
                   </a>
+                  <p>Bike</p>
+                </div>
               </div>
-              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 portfolio-item">
-                  <a href="#" class="portfolio-link">
-                      <div class="caption">
-                          <div class="caption-content">
-                              <i class="fa fa-search-plus fa-3x"></i>
-                          </div>
-                      </div>
-                      <img src="assets/images/proj1.png" class="img-responsive" alt="">
+              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                <div class="hovereffect">
+                  <a href="project.html">
+                    <img class="img-responsive" src="assets/images/proj1.png" alt="">
+                    <div class="overlay">
+                      <h2>Effect 13</h2>
+                      <p>LINK HERE</p> 
+                    </div>
                   </a>
+                  <p>Bike</p>
+                </div>
               </div>
-              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 portfolio-item">
-                  <a href="#" class="portfolio-link">
-                      <div class="caption">
-                          <div class="caption-content">
-                              <i class="fa fa-search-plus fa-3x"></i>
-                          </div>
-                      </div>
-                      <img src="assets/images/proj1.png" class="img-responsive" alt="">
+              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                <div class="hovereffect">
+                  <a href="project.html">
+                    <img class="img-responsive" src="assets/images/proj1.png" alt="">
+                    <div class="overlay">
+                      <h2>Effect 13</h2>
+                      <p>LINK HERE</p> 
+                    </div>
                   </a>
+                  <p>Bike</p>
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                <div class="hovereffect">
+                  <a href="project.html">
+                    <img class="img-responsive" src="assets/images/proj1.png" alt="">
+                    <div class="overlay">
+                      <h2>Effect 13</h2>
+                      <p>LINK HERE</p> 
+                    </div>
+                  </a>
+                  <p>Bike</p>
+                </div>
               </div>
           </div>
       </div>
