--- a/project.html
+++ b/project.html
@@ -50,16 +50,16 @@
                       <a href="index.html#ux-design">UX Design</a>
                   </li>
                   <li class="page-scroll">
-                      <a href="#3d-design">3D Design</a>
+                      <a href="index.html#3d-design">3D Design</a>
                   </li>
                   <li class="page-scroll">
-                      <a href="#about">About</a>
+                      <a href="index.html#about">About</a>
                   </li>
                   <li class="page-scroll">
-                      <a href="#resume">Resume</a>
+                      <a href="https://drive.google.com/file/d/0BwN89NjuvgNNVDRrMHZld2Nsd00/view" target="_blank">Resume</a>
                   </li>
                   <li class="page-scroll">
-                      <a href="#contact">Contact</a>
+                      <a href="index.html#contact">Contact</a>
                   </li>
               </ul>
           </div>
@@ -67,9 +67,120 @@
       </div>
       <!-- /.container-fluid -->
   </nav>
-
-  <div class="image-bg-fluid-height">
+  
+  <section class="image-bg-fluid-height" id="page-top" >
       <img class="img-responsive img-center" src="assets/images/proj1-wide.png" alt="">
+  </section>
+
+  <div class="container">
+    <div class="row">
+        <div class="col-lg-10 col-md-10 col-sm-8 col-xs-8">
+          <h3 class="orange">THE CHALLENGE</h3>
+          <p>Early in my time at General Assembly, I interviewed a classmate and found that a new app could help her to keep track of her diet. She wanted to lose weight but could not reliably track what she ate throughout the day for later review. I profiled her potential use cases and designed an app that would help her to meet her goals with ease and simplicity.</p>
+        </div>
+        <div class="col-lg-2 col-md-2 col-sm-4 col-xs-4">
+          <h4 class="orange">TEAM</h4>
+          <p>Solo project</p>
+          <h4 class="orange">MY ROLE</h4>
+          <p>Research<br />Interviews<br />Stoaryboarding<br />Prototyping<br />User Testing</p>
+          <h4 class="orange">TIMELINE</h4>
+          <p>One week</p>
+        </div>
+    </div>
+  </div>
+
+  <div class="darkGrey" id="process">
+      <div class="container">
+          <div class="row">
+            <h3 class="orange">THE PROCESS</h3>
+            <p>I began with a detailed qualitative user interview and wrote a desired feature set based on that information. From there I storyboarded potential use cases and made wireframes and user flows. After several iterations of those I finished up with UI mockups.</p>
+          </div>
+      </div>
+  </div>
+
+  <div class="lightGrey" id="process">
+      <div class="container">
+          <div class="row">
+            <h3 class="orange">Persona</h3>
+            <p>I began with a detailed qualitative user interview and wrote a desired feature set based on that information. From there I storyboarded potential use cases and made wireframes and user flows. After several iterations of those I finished up with UI mockups.</p>
+          </div>
+      </div>
+  </div>
+
+
+  <div class="container">
+    <h3 class="orange">Storyboarding</h3>
+    <div class="row">
+      <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6">
+        <img class="img-responsive img-center" src="assets/images/storyboard.webp" alt="">
+        <p>Karen doesn't always remember what she eats throughout the day. </p>
+      </div>
+      <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6">
+        <img class="img-responsive img-center" src="assets/images/storyboard.webp" alt="">
+        <p>She gets an idea that she can use her phone to track her food habits.</p>
+      </div>
+      <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6">
+        <img class="img-responsive img-center" src="assets/images/storyboard.webp" alt="">
+        <p>Karen takes a picture of her meal while having lunch with a friend</p>
+      </div>
+      <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6">
+        <img class="img-responsive img-center" src="assets/images/storyboard.webp" alt="">
+        <p>Karen takes a picture of her meal while having lunch with a friend</p>
+      </div>
+      <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6">
+        <img class="img-responsive img-center" src="assets/images/storyboard.webp" alt="">
+        <p>Karen doesn't always remember what she eats throughout the day. </p>
+      </div>
+      <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6">
+        <img class="img-responsive img-center" src="assets/images/storyboard.webp" alt="">
+        <p>She gets an idea that she can use her phone to track her food habits.</p>
+      </div>
+      <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6">
+        <img class="img-responsive img-center" src="assets/images/storyboard.webp" alt="">
+        <p>Karen takes a picture of her meal while having lunch with a friend</p>
+      </div>
+      <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6">
+        <img class="img-responsive img-center" src="assets/images/storyboard.webp" alt="">
+        <p>Karen takes a picture of her meal while having lunch with a friend</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <h3 class="orange">User flow</h3>
+    <img src="assets/images/userflow.webp" class="img-responsive" alt="">
+  </div>
+
+  <div class="lightGrey">
+    <div class="container">
+        <h3 class="orange">Sketching and iterating</h3>
+        <img src="assets/images/sketch.webp" class="img-responsive" alt="">
+        <p>After testing with multiple users I collected, compared, and prioritized feedback to develop the second iteration of wireframe sketches.</p>
+        <img src="assets/images/sketch.webp" class="img-responsive" alt="">
+    </div>
+  </div>
+
+  <div class="container">
+    <h3 class="orange">Feature set</h3>
+    <ul>
+      <li>Simple and rapid meal logging process</li>
+      <li>Ability to open the app in camera mode to accelerate logging</li>
+      <li>Simple and rapid meal logging process</li>
+      <li>Ability to open the app in camera mode to accelerate logging</li>
+    </ul>
+    <img src="assets/images/sketch.webp" class="img-responsive" alt="">
+    <img src="assets/images/sketch.webp" class="img-responsive" alt="">
+  </div>
+  
+  <div class="container">
+    <div class="row buttonGroup">
+<!--       <button type="button" id="goPreBtn">Prev</button>
+      <button type="button" id="goTopBtn"><a href="#page-top">Back to the Top</a></button>
+      <button type="button" id="goNextBtn">Next</button> -->
+      <a href="#" class="button" id="goPrevBtn">Prev</a>
+      <a href="#page-top" class="button" id="goTopBtn">Back to the Top</a>
+      <a href="#" class="button" id="goNextBtn">Next</a>
+    </div>
   </div>
 
   <!-- Footer -->
